--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "uekat-studies-wd-project-002",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.2.47"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "vue-tsc": "^1.4.2"
-  }
+    "name": "uekat-studies-wd-project-002",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "graphology": "^0.25.1",
+        "sigma": "^3.0.0-alpha3",
+        "vue": "^3.3.4"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
+        "typescript": "^5.0.4",
+        "vite": "^4.3.8",
+        "vue-tsc": "^1.6.5"
+    }
 }
