Fix build problem

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "graphology": "^0.25.1",
+        "graphology-types": "^0.24.7",
         "sigma": "^3.0.0-alpha3",
         "vue": "^3.3.4"
     },
