--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "chroma-js": "^2.4.2",
         "graphology": "^0.25.1",
+        "graphology-layout": "^0.6.1",
+        "graphology-layout-force": "^0.2.4",
+        "graphology-layout-forceatlas2": "^0.10.1",
         "graphology-types": "^0.24.7",
         "sigma": "^3.0.0-alpha3",
+        "uuid": "^9.0.0",
         "vue": "^3.3.4"
     },
     "devDependencies": {
+        "@types/chroma-js": "^2.4.0",
+        "@types/uuid": "^9.0.1",
         "@vitejs/plugin-vue": "^4.2.3",
         "typescript": "^5.0.4",
         "vite": "^4.3.8",
